<?xml version="1.0" encoding="utf-8"?><!--ConstraintLayout-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignupActivity">
    <!--Linear Layout vertical orientation-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Image view to display logo-->
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />
        <!--card view to display the content of form-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp">
            <!--linear layout to display vertically-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">
                <!--LinearLayout -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--TextView to display signup header-->
                    <TextView
                        android:id="@+id/signup_activity_tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:text="SIGN UP"
                        android:textColor="@color/black"
                        android:textSize="34sp"
                        android:textStyle="bold" />
                    <!--TextView to display name-->
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <!--EditText to insert full name-->
                    <EditText
                        android:id="@+id/login_activity_et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/gray"
                        android:ems="10"
                        android:hapticFeedbackEnabled="false"
                        android:hint="Enter Your Full Name"
                        android:inputType="textPersonName"
                        android:padding="15dp" />
                    <!--textView to display password-->
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <!--EditText to input password-->
                    <EditText
                        android:id="@+id/login_activity_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/gray"
                        android:ems="10"
                        android:hint="Enter Your Password"
                        android:inputType="textPersonName|textPassword"
                        android:padding="15dp" />
                    <!--textView to display confirm password-->
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <!--textView to insert re-enter password-->
                    <EditText
                        android:id="@+id/signup_activity_et_confirm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:background="@color/gray"
                        android:ems="10"
                        android:hint="Re-Enter Your Password"
                        android:inputType="textPassword"
                        android:padding="15dp" />
                    <!--linear layout close-->
                </LinearLayout>
                <!--Button for login-->
                <Button
                    android:id="@+id/login_activity_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@color/black"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@color/white" />
                <!--LinearLayout for signup content-->
                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">
                    <!--textView to display question-->
                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <!--Button fro signup-->
                    <Button
                        android:id="@+id/signup_activity_btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@color/black"
                        android:text="@string/login"
                        android:textColor="@color/white" />
                    <!--LinearLayout close-->
                </LinearLayout>
                <!--LinearLayout close-->
            </LinearLayout>

            <!--CardView close-->
        </androidx.cardview.widget.CardView>

        <!--LinearLayout close-->
    </LinearLayout>


    <!--Constraint close-->
</androidx.constraintlayout.widget.ConstraintLayout>